# jupyternotifyplus

./: .bump-my-version.toml  .bumpversion.toml  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  cliff.toml  index.html  mkdocs.yml  pyproject.toml
.github/: release-body.md  release.yml
.github/workflows/: bump-version.yml  changelog.yml  deploy.yml  publish.yml
changelog/: index.html
development/: index.html
docs/: changelog.md  development.md  index.md  index_all.md  installation.md  magics.md  presets.md  testing.md  usage.md
docs/overrides/: _footer.md
docs/overrides/partials/: footer.html  social.html
docs/overrides/partials/integrations/analytics/: custom.html
installation/: index.html
jupyternotifyplus/: __init__.py  notifyme.py
magics/: index.html
overrides/: _footer.md
overrides/partials/: social.html
presets/: index.html
search/: search_index.json
testing/: index.html
tests/: test_import.py  test_magic_registration.py  test_notifyme.py
usage/: index.html
