[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyternotifyplus"
version = "0.1.0"
description = "Enhanced Jupyter Notebook notifications with inline and end-of-cell magic commands."
authors = [
    { name = "Daniel", email = "your-email@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/cngmid/jupyternotifyplus"

[tool.setuptools.dynamic]
version = { attr = "jupyternotifyplus.version.__version__" }

[project.optional-dependencies]
dev = ["pytest"]

