[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyternotifyplus"
version = "0.1.0"
description = "Enhanced Jupyter Notebook notifications with inline and end-of-cell magic commands."
authors = [
    { name = "Daniel" }
]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/cngmid/jupyternotifyplus"
Documentation = "https://cngmid.github.io/jupyternotifyplus"

[project.optional-dependencies]
dev = ["pytest"]
